// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MediaCard component 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div>
              Test
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div>
            Test/Test
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with MimeTypeIndicator if an error appeared while loading the image 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div>
              Test
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div>
            Test/Test
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <div>
        mime-type-indicator
      </div>
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with a checkbox for selection 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div>
            <div
              class="titleText"
            >
              <div>
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div>
            Test/Test
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with ghostLocale 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <span>
              en
            </span>
            <div>
              Test
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div>
            Test/Test
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with loader if image has not been loaded yet 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div>
              Test
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div>
            Test/Test
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div>
        loader
      </div>
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;
